--- a/.env
+++ b/.env
@@ -1,7 +1,27 @@
-APP_URL=
+APP_URL = https://localhost:<5500>/todoitems
+APP_URL = http://localhost:3000
 
-CONVERTKIT_API_SECRET=06tWdFH76Pc7RZ3MXl-3EQ
 
-STORAGE+TYPE=local
 
-basededados = https://data.mongodb-api.com/app/data-qyzkl/endpoint/data/beta
+http://127.0.0.1:5500/
+ https://localhost:<5500>/todoitems
+
+https://api.nuget.org/v3/index.json
+
+C:\Users\miche\OneDrive\Área de Trabalho\Projeto Api Tarefas\projeto antigo\Área de Trabalho.csproj
+  Done
+
+  Resources
+  http://localhost:3000/posts
+  http://localhost:3000/comments
+  http://localhost:3000/profile
+
+  Home
+  http://localhost:3000
+
+TodoItemsController
+GET /db 200 4.788 ms - 243
+GET /__rules 404 10.912 ms - 2
+
+
+
