--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+## Local Host
+
 APP_URL = https://localhost:<5500>/todoitems
 APP_URL = http://localhost:3000
 
@@ -8,8 +10,8 @@ http://127.0.0.1:5500/
 
 https://api.nuget.org/v3/index.json
 
-C:\Users\miche\OneDrive\Área de Trabalho\Projeto Api Tarefas\projeto antigo\Área de Trabalho.csproj
-  Done
+
+##Rotas de conexão
 
   Resources
   http://localhost:3000/posts
@@ -19,7 +21,9 @@ C:\Users\miche\OneDrive\Área de Trabalho\Projeto Api Tarefas\projeto antigo\Ár
   Home
   http://localhost:3000
 
-TodoItemsController
+##TodoItemsController
+
+
 GET /db 200 4.788 ms - 243
 GET /__rules 404 10.912 ms - 2
 
