--- a/Área de Trabalho.csproj.nuget.g.props
+++ b/Área de Trabalho.csproj.nuget.g.props
@@ -1,4 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" standalone="no"?>
+//INSTALANDO ATUALIZAÇÃO ASP NET CORE 6.2.3
+
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Condition=" '$(ExcludeRestorePackageImports)' != 'true' ">
     <RestoreSuccess Condition=" '$(RestoreSuccess)' == '' ">True</RestoreSuccess>
