--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-//Local Host
+//Local Host//
 
 APP_URL = https://localhost:<5500>/todoitems
 APP_URL = http://localhost:3000
 
 
 
-http://127.0.0.1:5500/
+http://127.0.0.1:5500
  https://localhost:<5500>/todoitems
 
 https://api.nuget.org/v3/index.json
 
 
-//Rotas de conexão
+//Rotas de conexão//
 
   Resources
   http://localhost:3000/posts
@@ -21,7 +21,7 @@ https://api.nuget.org/v3/index.json
   Home
   http://localhost:3000
 
-//TodoItemsController
+//TodoItemsController//
 
 
 GET /db 200 4.788 ms - 243
